--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
     <title>33 one third</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -10,16 +10,27 @@
 <body>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
-  <div class="container">
-      <div class="notification is-warning">
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-    </div>
+  <section class="section">
+      <div class="container">
+          <div class="notification is-warning">
+            <ul class=flashes>
+            {% for message in messages %}
+              <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+          </div>
+      </div>
   </div>
   {% endif %}
 {% endwith %}
 {% block body %}{% endblock %}
+<footer class="footer is-small">
+  <div class="container">
+    <div class="content has-text-left">
+      <p>
+        <strong>33 &#8531;</strong> project. <a href="https://github.com/33onethird">Source code</a>.
+      </p>
+    </div>
+  </div>
+</footer>
 </body>
