--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
     <title>33 one third</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -10,14 +10,16 @@
 <body>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
-  <div class="container">
-      <div class="notification is-warning">
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-    </div>
+  <section class="section">
+      <div class="container">
+          <div class="notification is-warning">
+            <ul class=flashes>
+            {% for message in messages %}
+              <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+          </div>
+      </div>
   </div>
   {% endif %}
 {% endwith %}
