--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
+    <script>
+        var file = document.getElementById('file');
+        file.onchange = function() {
+            if (file.files.length > 0) {
+              document.getElementById('file-name').innerHTML = file.files[0].name;
+            }
+        };
+    </script>
 </head>
 <body>
 {% with messages = get_flashed_messages() %}
