--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,14 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
-    <script>
-        var file = document.getElementById('file');
-        file.onchange = function() {
-            if (file.files.length > 0) {
-              document.getElementById('file-name').innerHTML = file.files[0].name;
-            }
-        };
-    </script>
 </head>
 <body>
   <section class="navbar" role="navigation" aria-label="main navigation">
@@ -31,25 +23,28 @@
 {% with messages = get_flashed_messages() %}
   {% if messages %}
   <section class="section">
-        <div class="notification is-info">
-		<button class="delete"></button>
-		<ul class=flashes>
+      <div class="container">
+          <div class="notification is-warning">
+            <ul class=flashes>
             {% for message in messages %}
-			<li>{{ message }}</li>
+              <li>{{ message }}</li>
             {% endfor %}
-		</ul>
-	</div>
+            </ul>
+          </div>
+      </div>
   </section>
+  </div>
   {% endif %}
 {% endwith %}
 {% block body %}{% endblock %}
-  <div class="container is-size-3">
-  <hr/>
-    <div class="content has-text-left is-small">
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-left">
       <p>
         <strong>33 &#8531;</strong> project. <a href="https://github.com/33onethird">Source code</a>.
       </p>
     </div>
   </div>
-  </section>
+</footer></section>
 </body>
+
