--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
               <span class="file-icon">
                 <i class="fa fa-upload"></i>
               </span>
-              <span class="file-label">
+              <span class="file-label" id="file-name">
                 Choose a file…
               </span>
             </span>
